20221121업데이트(메인화면이름 바꿈)
으어어 피곤쓰

--- a/arknights/3.html
+++ b/arknights/3.html
@@ -16,7 +16,7 @@
    <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <img src="로도스1.png" alt="로도스1" width="110" height="110" class="d-inline-block align-text-top">
-          <a class="navbar-brand" href="#">Arknights</a>
+          <a class="navbar-brand" href="index.html">Arknity</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -90,7 +90,7 @@
                                 <div class="col-lg-3 col-md-3 col-sm-12 p-0">
                                     <label for="search-type" hidden>검색 유형</label>
                                     <select class="form-control" id="search-type" name="searchType">
-                                        <option>제목</option>
+                                        <option>자유게시판</option>
                                         <option>본문</option>
                                         <option>id</option>
                                         <option>닉네임</option>
