--- a/arknights/index.html
+++ b/arknights/index.html
@@ -17,7 +17,7 @@
    <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <img src="로도스1.png" alt="로도스1" width="110" height="110" class="d-inline-block align-text-top">
-          <a class="navbar-brand" href="#">Arknights</a>
+          <a class="navbar-brand" href="index.html">Arknity</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
