20221121 수정(div좀 지움)

--- a/arknights/index.html
+++ b/arknights/index.html
@@ -104,20 +104,17 @@
             맺고, 문제를 해결할 수 있는 열쇠를 찾기 위해 리유니온과 정면으로 
             맞서게 된다
       <!--기본 스토리 -->
-              <div class="col-0" style="background-color: rgb(70, 22, 182)">
-                
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <p align="center">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/hhsEwG-n22Y" 
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
     encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </p>
     <br><br>
-    <!-- 유튜브(테라1.0) 링크 -->
+    <!-- 유튜브 링크 -->
 
     <div class="container text-center">
       <div class="row3">
