--- a/arknights/2.html
+++ b/arknights/2.html
@@ -81,7 +81,7 @@
                     <br><br>
 
                   <div class="d-grid">
-                    <button class="btn btn-dark btn-login text-uppercase fw-bold" type="submit">로그인
+                    <button class="btn btn-dark btn-login text-uppercase fw-bold" type="submit">가입하기
                       </button>
                   </div>
                   <hr class="my-4">
