20221122 저작권표기변경

--- a/arknights/index.html
+++ b/arknights/index.html
@@ -247,7 +247,7 @@ target="_blank">
       <a class="btn btn-outline-light btn-floating m-1" href="https://www.google.com/"  target="_blank" role="button"
         ><i class="fab fa-google"></i
       ></a>
-      다양한 정보를 찾아보세요.
+      Copyright ©2017 Hypergryph
       <a class="btn btn-outline-light btn-floating m-1" href="index.html" role="button"
         ><i class="fa-sharp fa-solid fa-house"></i>
       </a>
@@ -256,7 +256,7 @@ target="_blank">
       ></a>
     </section>
 </footer>
-  
+  <!-- 푸터 -->
 </div>
 
 </body>
