20221122 저작권표기고침

--- a/arknights/index.html
+++ b/arknights/index.html
@@ -247,13 +247,13 @@ target="_blank">
       <a class="btn btn-outline-light btn-floating m-1" href="https://www.google.com/"  target="_blank" role="button"
         ><i class="fab fa-google"></i
       ></a>
-      Copyright ©2017 Hypergryph
+      
       <a class="btn btn-outline-light btn-floating m-1" href="index.html" role="button"
         ><i class="fa-sharp fa-solid fa-house"></i>
       </a>
       <a class="btn btn-outline-light btn-floating m-1" href="3.html" role="button"
         ><i class="fa-solid fa-comments"></i
-      ></a>
+      ></a><br>© 2017. Hypergryph all rigths reserved.
     </section>
 </footer>
   <!-- 푸터 -->
