20221123 저작권표기고침

--- a/arknights/index.html
+++ b/arknights/index.html
@@ -253,7 +253,7 @@ target="_blank">
       </a>
       <a class="btn btn-outline-light btn-floating m-1" href="3.html" role="button"
         ><i class="fa-solid fa-comments"></i
-      ></a><br>© 2017. Hypergryph all rigths reserved.
+      ></a><br>© 2017. Hypergryph Co. all rigths reserved.
     </section>
 </footer>
   <!-- 푸터 -->
