--- a/arknights/3.html
+++ b/arknights/3.html
@@ -252,7 +252,7 @@
       </a>
       <a class="btn btn-outline-light btn-floating m-1" href="3.html" role="button"
         ><i class="fa-solid fa-comments"></i>
-      </a><br>© 2017. Hypergryph all rigths reserved.
+      </a><br>© 2017. Hypergryph Co. all rigths reserved.
       </section>
   
     </div>
